Adjust Add Book page to only include the form. Add Home button to nav bar.

--- a/createbook.html
+++ b/createbook.html
@@ -12,14 +12,14 @@
        <a href="https://greads-fc5ed.firebaseapp.com/#" class="brand-logo"><i class="large material-icons">book</i>Galvanize Reads</a>
 
         <ul id="nav-mobile" class="right hide-on-med-and-down">
+          <li><a href="index.html">Home</a></li>
           <li><a href="createbook.html">Add A Book</a></li>
-          <li><a href="badges.html"></a></li>
           <li><a href="collapsible.html"></a></li>
         </ul>
       </div>
     </nav>
 
-    <div class="container">
+    <!-- <div class="container">
       <div class="row">
         <div class="col s6 pull-s2">
           <div class="card horizontal">
@@ -35,7 +35,7 @@
               </div>
             </div>
           </div>
-          <!-- <a class="waves-effect waves-light btn">button</a> -->
+
         </div>
 
         <div class="col s6 pull-s2">
@@ -52,10 +52,10 @@
               </div>
             </div>
           </div>
-          <!-- <a class="waves-effect waves-light btn">button</a> -->
+
         </div>
       </div>
-    </div>
+    </div> -->
 
     <div class="container ">
       <div class="row">
@@ -74,7 +74,7 @@
           </div>
           <div class="row">
             <div class="input-field col s8">
-              <input id="cover_image_url" type="text" class="cover_image_url validate">
+              <input id="cover_image_url"  value =""type="text" class="cover_image_url validate">
               <label for="cover_image_URL">Cover Image URL</label>
             </div>
           </div>
