--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
        <a href="#!" class="brand-logo"><i class="large material-icons">book</i>Galvanize Reads</a>
 
         <ul id="nav-mobile" class="right hide-on-med-and-down">
+          <li><a href="index.html">Home</a></li>
           <li><a href="createbook.html">Add A Book</a></li>
-          <li><a href="badges.html"></a></li>
           <li><a href="collapsible.html"></a></li>
         </ul>
       </div>
@@ -94,7 +94,7 @@
                            <p>{{description}}</p>
                          </div>
                          <div class="card-action">
-                           <a href="#">Edit Book</a>
+                           <a href="">Edit Book</a>
                          </div>
                        </div>
                      </div>
