--- a/editbook.html
+++ b/editbook.html
@@ -9,7 +9,7 @@
   <body>
     <nav>
       <div class="nav-wrapper">
-       <a href="#!" class="brand-logo"><i class="large material-icons">book</i>Galvanize Reads</a>
+       <a href="https://greads-fc5ed.firebaseapp.com/#" class="brand-logo"><i class="large material-icons">book</i>Galvanize Reads</a>
 
         <ul id="nav-mobile" class="right hide-on-med-and-down">
           <li><a href="index.html">Home</a></li>
@@ -19,7 +19,7 @@
       </div>
     </nav>
 
-    <div class="container">
+    <!-- <div class="container">
       <div class="row">
         <div class="col s6 pull-s2">
           <div class="card horizontal">
@@ -35,7 +35,7 @@
               </div>
             </div>
           </div>
-          <!-- <a class="waves-effect waves-light btn">button</a> -->
+
         </div>
 
         <div class="col s6 pull-s2">
@@ -52,16 +52,28 @@
               </div>
             </div>
           </div>
-          <!-- <a class="waves-effect waves-light btn">button</a> -->
+
         </div>
+      </div>
+    </div> -->
+
+    <div class="container ">
+      <div class="row">
+
+
+        <!-- <button class="btn waves-effect waves-light" type="submit" name="action">Add Book
+          <i class="material-icons right">send</i>
+        </button> -->
       </div>
     </div>
 
     <main>
       <div class="container">
        <div class="row books">
+         <form class="col s12 pull-s1">
 
-         </div>
+
+         </form>
        </div>
       </div>
     </main>
@@ -69,38 +81,36 @@
 <!-- handlebars appending stuff to page -->
     <script id="bookcard-template" type="text/x-handlebars-template">
 
-               <!-- <div class="col s4">
-                 <div class="card">
-                     <div class="card-image waves-effect waves-block waves-light">
-                       <img class="activator responsive-img" src={{cover}}>
-                     </div>
-                     <div class="card-content">
-                       <span class="card-title activator grey-text text-darken-4">{{title}}<i class="material-icons right">more_vert</i></span>
-                     </div>
-                     <div class="card-reveal">
-                       <span class="card-title grey-text text-darken-4">{{title}}<i class="material-icons right">close</i></span>
-                       <p>{{description}}</p>
-                     </div>
-                   </div> -->
 
-                   <div class="col s12 m7">
-                     <h2 class="header">{{title}}</h2>
-                     <div class="card horizontal">
-                       <div class="card-image">
-                         <img src={{cover}}>
-                       </div>
-                       <div class="card-stacked">
-                         <div class="card-content">
-                           <p>{{description}}</p>
-                         </div>
-                         <div class="card-action">
-                           <!-- <button id="{{id}}" href="editbook.html"+"#id" class="waves-effect waves-teal btn-flat editbutton">Edit Book</button> -->
-                           <a id="{{id}}" href="editbook.html?id={{id}}" class="edit-button" >Edit Book</a>
-                         </div>
-                       </div>
-                     </div>
-                   </div>
 
+      <div class="row">
+        <div class="input-field col s8">
+          <input id="title" type="text" value="{{title}}" class=" title validate" required="">
+          <label class="active" for="title">Title</label>
+        </div>
+      </div>
+      <div class="row">
+        <div class="input-field col s8">
+          <input id="genre" value="{{genre}}" type="text" class="genre validate" required=""></input>
+          <label class="active" for="genre">Genre</label>
+        </div>
+      </div>
+      <div class="row">
+        <div class="input-field col s8">
+          <input id="cover_image_url" value ={{cover}} type="text" class=" active cover_image_url validate" required="">
+          <label class="active" for="cover_image_URL">Cover Image URL</label>
+        </div>
+      </div>
+      <div class="row">
+          <div class="input-field col s8">
+            <textarea id="descritption" placeholder="" value={{description}} class="description materialize-textarea" required="">{{description}}</textarea>
+
+            <label class="active" for="descritption">Description</label>
+          </div>
+      </div>
+      <button id= 'createBooks'class="btn waves-effect waves-light" type="submit" name="action">Add Book
+        <i class="material-icons right">send</i>
+      </button>
 
        </script>
 
@@ -110,6 +120,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/js/materialize.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.10/handlebars.min.js"></script>
-    <script src="index.js" charset="utf-8"></script>
+
+
+    <script src="editbook.js" charset="utf-8"></script>
   </body>
 </html>
